force-app/main/default/objects/Dispenser_Model__c/Dispenser_Model__c.object-meta.xml
<CustomObject>
    <label>Dispenser Model</label>
    <nameField>
        <label>Dispenser Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispenser Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>