force-app/main/default/objects/Dispenser_Model__c/fields/Dimension_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Dimension_unit_of_measure__c</fullName>
    <label>Dimension Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inch</fullName>
            </value>
            <value>
                <fullName>cm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>