force-app/main/default/objects/Dispenser_Model__c/fields/Dispenser_Type1__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Type1__c</fullName>
    <label>Dispenser Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self Serve</fullName>
            </value>
            <value>
                <fullName>Crew Serve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>