force-app/main/default/objects/Dispenser_Model__c/fields/Dispenser_Type__c.field-meta.xml
<CustomField>
    <fullName>Dispenser_Type__c</fullName>
    <label>Equipment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>