force-app/main/default/objects/Dispenser_Model__c/fields/IC_Code__c.field-meta.xml
<CustomField>
    <fullName>IC_Code__c</fullName>
    <label>IC Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>