force-app/main/default/objects/Dispenser_Model__c/fields/IC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>IC_Code_Description__c</fullName>
    <label>IC Code Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>