force-app/main/default/objects/Dispenser_Model__c/fields/Weight_unit_of_measure__c.field-meta.xml
<CustomField>
    <fullName>Weight_unit_of_measure__c</fullName>
    <label>Weight unit of measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>lbs</fullName>
            </value>
            <value>
                <fullName>kgs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>