force-app/main/default/objects/Dispenser_Model__c/listViews/Dispenser_Model_Details.listView-meta.xml
<ListView>
    <fullName>Dispenser_Model_Details</fullName>
    <columns>NAME</columns>
    <columns>Dispenser_Type__c</columns>
    <columns>IC_Code__c</columns>
    <columns>IC_Code_Description__c</columns>
    <columns>Series__c</columns>
    <columns>Weight__c</columns>
    <columns>Weight_unit_of_measure__c</columns>
    <columns>Dimensions__c</columns>
    <columns>Dimension_unit_of_measure__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>Dispenser Model - Details</label>
</ListView>